# mcp-control-plane

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  RUNBOOK.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  release.yml
deploy/compose/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
deploy/compose/grafana-dashboards/: mcp-control-plane.json
deploy/docker/: Dockerfile
deploy/helm/chart/: Chart.yaml  values.yaml
deploy/helm/chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
src/mcp_cp/: adapters.py  logging.py  models.py  policy.py  server.py  telemetry.py
tests/: test_http_mode.py  test_tools.py  test_tracing.py
